--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.11",
     "react": "18.0.0",
     "react-native": "0.69.2",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-paper": "^4.12.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
